# CustomHK

./: .gitignore  CHANGELOG.md  COMMIT_SUMMARY.md  CustomHK.pyw.backup  MIGRATION.md  QUICKSTART.md  README.md  config.example.yaml  config.yaml  pyproject.toml  requirements.txt  validate.py
customhk/: __init__.py  config.py  hotkey_manager.py  main.py  tray_icon.py
customhk/actions/: __init__.py  base.py  clipboard.py  registry.py  signature.py  wizard.py
customhk/utils/: __init__.py  clipboard.py  keyboard.py  window.py
